--- a/custom_components/screenlogic_debug/translations/en.json
+++ b/custom_components/screenlogic_debug/translations/en.json
@@ -1,18 +1,39 @@
 {
     "config": {
-        "step": {
-            "user": {
-                "description": "If you need help with the configuration have a look here: https://github.com/dieselrabbit/screenlogic-debug",
-                "data": {
-                    "username": "Username",
-                    "password": "Password"
-                }
-            }
+        "abort": {
+            "already_configured": "Device is already configured"
         },
         "error": {
-            "auth": "Username/Password is wrong.",
-            "connection": "Unable to connect to the server.",
-            "unknown": "Unknown error occurred."
+            "cannot_connect": "Failed to connect"
+        },
+        "flow_title": "{name}",
+        "step": {
+            "gateway_entry": {
+                "data": {
+                    "ip_address": "IP Address",
+                    "port": "Port"
+                },
+                "description": "Enter your ScreenLogic Gateway information.",
+                "title": "ScreenLogic Debug"
+            },
+            "gateway_select": {
+                "data": {
+                    "selected_gateway": "Gateway"
+                },
+                "description": "The following ScreenLogic gateways were discovered. Please select one to configure, or choose to manually configure a ScreenLogic gateway.",
+                "title": "ScreenLogic Debug"
+            }
+        }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "scan_interval": "Seconds between scans"
+                },
+                "description": "Specify settings for {gateway_name}",
+                "title": "ScreenLogic Debug"
+            }
         }
     }
 }
